<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddTask">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="144dp"
        android:layout_height="36dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="2dp"
        android:labelFor="@id/task_title_input"
        android:text="@string/task_title_txt"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/task_title_input"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="40dp"
        android:autofillHints="@string/task_title_txt"
        android:hint="@string/task_title"

        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/task_desc"
        android:text="@string/task_description_txt"

        android:textSize="25sp" />

    <EditText
        android:id="@+id/task_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:autofillHints="@string/task_description_edit"
        android:hint="@string/task_description_edit"

        android:inputType="text"

        android:minHeight="48dp"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_state1"
        android:textSize="25sp" />

<!--    <EditText-->
<!--        android:id="@+id/state"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="9dp"-->
<!--        android:hint="@string/task_description_edit"-->

<!--        android:inputType="text"-->

<!--        android:minHeight="48dp"-->
<!--        tools:ignore="LabelFor,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />-->


        <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        tools:ignore="SpeakableTextPresentCheck" />
    <TextView
        android:id="@+id/teamtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_team"
        android:textSize="25sp" />

<!--    <EditText-->
<!--        android:id="@+id/team"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="9dp"-->
<!--        android:autofillHints="@string/your_team"-->
<!--        android:hint="@string/task_description_edit"-->

<!--        android:inputType="text"-->

<!--        android:minHeight="48dp"-->
<!--        tools:ignore="LabelFor,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />-->



        <Spinner
        android:id="@+id/teamspinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/addTaskBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="30dp"
        android:text="@string/add_task_btn" />

    <Button
        android:id="@+id/goHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1sp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="1dp"
        android:baselineAligned="false"
        android:text="@string/go_home" />

    <Button
        android:id="@+id/go_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_details" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="90dp"
        android:layout_height="23dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="14dp"
        android:labelFor="@id/total_task_no"
        android:text="@string/total_task" />

    <NumberPicker
        android:id="@+id/total_task_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="132dp" />

</LinearLayout>